--- a/equipo/index.html
+++ b/equipo/index.html
@@ -102,7 +102,7 @@
                             Cux Prada
                         </p>
                         <p class="bio">
-                            Cux es un estudiante de primero de ingeniería informática, con especial interés en la
+                            Cux es un estudiante de ingeniería informática, con especial interés en la
                             inteligencia artificial y en las soluciones tecnológicas a problemas existentes en las
                             comunidades discriminadas.
                         </p>
